--- a/styles/style.css
+++ b/styles/style.css
@@ -5,34 +5,44 @@
 }
 
 .card{
-    box-shadow: 2.5px 2.5px 2.5px rgba(70,150,158,0.8);
+    box-shadow: 2.5px 2.5px 2.5px lightcoral;
 }
 
 body{
-    background-image: url(../assets/pexels-eberhard-grossgasteiger-1064162.jpg);
+    background-image: url(../assets/pexels-tim-douglas-6567255.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    /* height: 100vh; */
+}
+
+#landing-page{
     height: 100vh;
 }
 
 #product h4{
     font-weight: bold;
-    text-shadow: 2px 2px 2px rgba(70, 150, 158, 0.8);
+    text-shadow: 2px 2px 2px white;
+    color: lightcoral;
 }
 
 .navbar-nav a{
-    color: black;
+    color: white;
     font-weight: bold;
     font-size: 20px;
 }
 
 .navbar-nav a:hover{
-    color:white;
+    color:lightcoral;
 
 }
 .title h1,h6{
     font-weight: bold;
-    text-shadow: 2.5px 2.5px 2.5px rgba(70, 150, 158, 0.8);
+    text-shadow: 2.5px 2.5px 2.5px white;
+    color: lightcoral;
+}
+
+.title h6{
+    text-shadow: 2.5px 2.5px 2.5px lightcoral;
 }
 
 #heading{
