--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
+
 *,*::after,*::before{
     margin: 0;
     padding: 0;
@@ -6,6 +8,12 @@
 
 .card{
     box-shadow: 2.5px 2.5px 2.5px lightcoral;
+}
+
+.card:hover {
+    box-shadow: 2.5px 2.5px 2.5px lightcoral;
+    color:white;
+    background: transparent;
 }
 
 body{
@@ -19,10 +27,23 @@ body{
     height: 100vh;
 }
 
-#product h4{
+/* #product h4{
     font-weight: bold;
     text-shadow: 2px 2px 2px white;
     color: lightcoral;
+} */
+#admin{
+    color: white;
+}
+
+.display-4{
+    font-weight: bold;
+    text-shadow: 2px 2px 2px white;
+    color: lightcoral;
+}
+
+#admin td:hover{
+    background: transparent;
 }
 
 .navbar-nav a{
