--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
-
 *,*::after,*::before{
     margin: 0;
     padding: 0;
@@ -20,18 +18,12 @@ body{
     background-image: url(../assets/pexels-tim-douglas-6567255.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    /* height: 100vh; */
 }
 
 #landing-page{
     height: 100vh;
 }
 
-/* #product h4{
-    font-weight: bold;
-    text-shadow: 2px 2px 2px white;
-    color: lightcoral;
-} */
 #admin{
     color: white;
 }
@@ -68,4 +60,15 @@ body{
 
 #heading{
     padding-top: 13rem;
+}
+
+i{
+    cursor: pointer;
+}
+
+.modal-body input{
+    width: 100%;
+    border-radius: 4px;
+    padding: 2px;
+    margin: 2px 0;
 }
